--- a/src/Pages/SignUp/Right_section/Right.module.css
+++ b/src/Pages/SignUp/Right_section/Right.module.css
@@ -12,4 +12,8 @@
 }
 .box Input{
     height: 50px;
+    font-size: "16px";
+    line-height: 22px;
+    font-family: Gilroy - 700;
+    font-weight: 700;
 }
