--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -49,3 +49,11 @@
     background-color:#006bff ;
 }
 
+@media only screen and (min-width:0px) and (max-width:320px){
+    .NavContainer{
+        border: 1px solid;
+        position: relative;
+        width: 200px;
+        float: left;
+    }
+}
